<resources>
    <string name="app_name">Вкусные рецепты</string>
    <string name="deliciousDishes">Вкусные рецепты</string>
    <string name="description_welcome">Твоя личная книга рецептов</string>
    <string name="all_recipes">Все рецепты</string>
    <string name="filter">Фильтр</string>
    <string name="favourites">Избранное</string>
    <string name="title_activity_feed_fragment">FeedFragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Поиск</string>
    <string name="add_recipe">Добавьте рецепт</string>
    <string name="cancel_filters">Сбросить фильтр</string>
    <string name="delete">Удалить</string>
    <string name="menu_edit">Изменить</string>
    <string name="avatar_description">Avatar description</string>
    <string name="description_post_menu">Post menu</string>
    <string name="title">Название</string>
    <string name="content_hint">Рецепт</string>
    <string name="european_type">Европейская</string>
    <string name="asian_type">Азиатская</string>
    <string name="eastern_type">Восточная</string>
    <string name="russian_type">Русская</string>
    <string name="american_type">Американская</string>
    <string name="recipe_save">Сохранить рецепт</string>
    <string name="recipeContent">Пельмени – знаменитое блюдо русской кухни, имеющее древние китайские, финно-угорские, тюркские и славянские корни.</string>
    <string name="text_empty_list">Здесь ничего нет</string>
    <string name="author">Автор</string>
</resources>