<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filters_category_root"
    android:background="@drawable/side_nav_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/black"
        android:layout_margin="8dp"
        android:text="@string/radio_group_header"/>

        <RadioButton
            android:id="@+id/сheckBoxEuropean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/black"
            android:text="@string/european_type"/>
        <RadioButton
            android:id="@+id/checkBoxAsian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/black"
            android:text="@string/asian_type"/>
        <RadioButton
            android:id="@+id/checkBoxEastern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/black"
            android:text="@string/eastern_type"/>
        <RadioButton
            android:id="@+id/checkBoxRussian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/black"
            android:text="@string/russian_type"/>
        <RadioButton
            android:id="@+id/checkBoxAmerican"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/black"
            android:text="@string/american_type"/>
    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/recipe_save"
        app:srcCompat="@drawable/ic_ok_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>